--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.1",
     "koa-router": "^12.0.0",
-    "koa-session": "^6.4.0",
-    "koa-static": "^5.0.0"
+    "koa-session": "^6.4.0"
   }
 }
